--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -2,9 +2,121 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8"></meta>
-<title>Insert title here</title>
+    <title>后台管理界面-电影推酷网</title>
+    <link rel="stylesheet" type="text/css" href="/asserts/jquery-easyui-1.3.3/themes/default/easyui.css" />
+    <link rel="stylesheet" type="text/css" href="/asserts/jquery-easyui-1.3.3/themes/icon.css" />
+    <script type="text/javascript" src="/asserts/jquery-easyui-1.3.3/jquery.min.js"></script>
+    <script type="text/javascript" src="/asserts/jquery-easyui-1.3.3/jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="/asserts/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js"></script>
 </head>
-<body>
-main
+<script type="text/javascript">
+
+    /*<![CDATA[*/
+
+    $(function(){
+
+        //捕捉 'onSelect' 事件
+        /*$('#tabs').tabs({
+            onSelect:function(title){
+                alert(title+' is selected');
+            }
+        });*/
+
+
+    });
+
+    function logout(){
+        $.messager.confirm("系统提示","您确定要退出系统吗？",function(r){
+            if(r){
+                window.location.href="/logout";
+            }
+        });
+
+        /*$.messager.show({
+            title:'My Title',
+            msg:'Message will be closed after 2 seconds.',
+            showType:'show',
+            timeout: 3000,
+            style:{
+                right:'',
+                top:document.body.scrollTop+document.documentElement.scrollTop,
+                bottom:''
+            }
+        });*/
+
+       /* $.messager.progress({
+            interval:400
+        });*/
+
+
+    }
+
+    function openTab(text,url,iconCls){
+        if($("#tabs").tabs("exists",text)){
+            $("#tabs").tabs("select",text);
+        }else{
+            var content="<iframe frameborder=0 scrolling='auto' style='width:100%;height:99.6%' src='/admin/"+url+"'></iframe>";
+            $("#tabs").tabs("add",{
+                title:text,
+                iconCls:iconCls,
+                closable:true,
+                content:content
+            });
+
+           /* // 添加一个新的标签页面板（tab panel）
+            $('#tabs').tabs('add',{
+                title:text,
+                content:'Tab Body'+text,
+                closable:true,
+                tools:[{
+                    iconCls:'icon-mini-refresh',
+                    handler:function(){
+                        alert('refresh');
+                    }
+                }]
+            });*/
+
+        }
+    }
+
+    /*]]>*/
+
+</script>
+<body class="easyui-layout">
+<div region="north" style="height: 86px;background-color: #E0ECFF">
+    <table style="padding: 5px" width="100%">
+        <tr>
+            <td width="50%">
+                <img alt="logo" src="/asserts/images/logo.png" />
+            </td>
+            <td valign="bottom" align="right" width="50%">
+                <font size="3">&nbsp;&nbsp;<strong>欢迎：</strong><span th:text="${#httpServletRequest.remoteUser}"></span></font>
+            </td>
+        </tr>
+    </table>
+</div>
+
+<div region="center">
+    <div class="easyui-tabs" fit="true" border="false" id="tabs">
+        <div title="首页" data-options="iconCls:'icon-home'">
+            <div align="center" style="padding-top: 100px"><font color="red" size="10">欢迎使用</font></div>
+        </div>
+    </div>
+</div>
+
+<div region="west" style="width: 200px" title="导航菜单" split="true">
+    <div style="padding-top: 10px;padding-left: 10px;" data-toggle="topjui-sidemenu" data-options="data:data">
+        <a href="javascript:openTab('添加电影信息','addFilm.html','icon-addFilm')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-addFilm'" style="width: 150px;">添加电影信息</a>
+        <a href="javascript:openTab('电影动态管理','infoManage.html','icon-dynamic')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-dynamic'" style="width: 150px;">电影动态管理</a>
+        <a href="javascript:openTab('电影信息管理','filmManage.html','icon-film')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-film'" style="width: 150px;">电影信息管理</a>
+        <a href="javascript:openTab('网址信息管理','webSiteManage.html','icon-website')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-website'" style="width: 150px;">网址信息管理</a>
+        <a href="javascript:openTab('友情链接管理','linkManage.html','icon-link')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-link'" style="width: 150px;">友情链接管理</a>
+        <a href="javascript:logout()" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-exit'" style="width: 150px;">安全退出</a>
+    </div>
+</div>
+
+<div region="south" style="height: 30px;padding: 5px" align="center">
+    Copyright © 断弯刀
+</div>
 </body>
 </html>
