--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,28 +4,26 @@
   <meta charset="UTF-8"></meta>
   <title>管理员登录界面</title>
   <!-- Vendor CSS -->
-  <link href="/static/login/css/material-design-iconic-font/css/material-design-iconic-font.min.css" rel="stylesheet" type="text/css"></link>
+  <link href="/asserts/login/css/material-design-iconic-font/css/material-design-iconic-font.min.css" rel="stylesheet" type="text/css"></link>
   <!-- CSS -->
-  <link href="/static/login/css/app.min.1.css" rel="stylesheet" type="text/css"></link>
-  <script type="text/javascript">
-  
-    function submitData(){
-    	var username=$("#username").val();
-    	var password=$("#password").val();
-    	if(username==""){
-    		alert("请输入用户名！");
-    		return;
-    	}
-    	if(password==""){
-    		alert("请输入密码！");
-    		return;
-    	}
-    	document.getElementById("fm").submit();
-    }
-  
-  	
-  </script>
- </head>
+  <link href="/asserts/login/css/app.min.1.css" rel="stylesheet" type="text/css"></link>
+	 <script type="text/javascript">
+		function submitData(){
+			var username=$("#username").val();
+			var password=$("#password").val();
+			if(username==""){
+				alert("请输入用户名！");
+				return;
+			}
+			if(password==""){
+				alert("请输入密码！");
+				return;
+			}
+			document.getElementById("fm").submit();
+		}
+
+     </script>
+     </head>
  <body class="login-content" data-ng-controller="loginCtrl as lctrl">
 	    <div class="lc-block" id="l-login" data-ng-class="{'toggled':lctrl.login === 1}">
      <form id="fm" action="/login" method="post">
@@ -64,30 +62,30 @@
     
  </body>
  	
- 	<script src="/static/login/js/bower_components/jquery/dist/jquery.min.js"></script>
-	<script src="/static/login/js/log.js"></script>
+ 	<script src="/asserts/login/js/bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="/asserts/login/js/log.js"></script>
 	<!-- Angular -->
-	<script src="/static/login/js/bower_components/angular/angular.min.js"></script>
-	<script src="/static/login/js/bower_components/angular-resource/angular-resource.min.js"></script>
-	<script src="/static/login/js/bower_components/angular-animate/angular-animate.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular/angular.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-resource/angular-resource.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-animate/angular-animate.min.js"></script>
 	
 	
 	<!-- Angular Modules -->
-	<script src="/static/login/js/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-	<script src="/static/login/js/bower_components/angular-loading-bar/src/loading-bar.js"></script>
-	<script src="/static/login/js/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
-	<script src="/static/login/js/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-loading-bar/src/loading-bar.js"></script>
+	<script src="/asserts/login/js/bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 	
 	<!-- Common js -->
-	<script src="/static/login/js/bower_components/angular-nouislider/src/nouislider.min.js"></script>
-	<script src="/static/login/js/bower_components/ng-table/dist/ng-table.min.js"></script>
+	<script src="/asserts/login/js/bower_components/angular-nouislider/src/nouislider.min.js"></script>
+	<script src="/asserts/login/js/bower_components/ng-table/dist/ng-table.min.js"></script>
 	
 
-	<script src="/static/login/js/app.js"></script>
-	<script src="/static/login/js/controllers/main.js"></script>
-	<script src="/static/login/js/controllers/ui-bootstrap.js"></script>
+	<script src="/asserts/login/js/app.js"></script>
+	<script src="/asserts/login/js/controllers/main.js"></script>
+	<script src="/asserts/login/js/controllers/ui-bootstrap.js"></script>
 	
 	
 	<!-- Template Modules -->
-	<script src="/static/login/js/modules/form.js"></script>
+	<script src="/asserts/login/js/modules/form.js"></script>
 </html>
