--- a/src/main/resources/templates/admin/linkManage.html
+++ b/src/main/resources/templates/admin/linkManage.html
@@ -3,51 +3,56 @@
 <head>
     <meta charset="UTF-8"/>
     <title>友情链接管理页面</title>
-    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/default/easyui.css" th:href="@{/jquery-easyui-1.3.3/themes/default/easyui.css}"/>
-    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/icon.css" th:href="@{/jquery-easyui-1.3.3/themes/icon.css}"/>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.min.js" th:src="@{/jquery-easyui-1.3.3/jquery.min.js}"></script>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.easyui.min.js" th:src="@{/jquery-easyui-1.3.3/jquery.easyui.min.js}"></script>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js" th:src="@{/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js}"></script>
+    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/default/easyui.css"
+          th:href="@{/jquery-easyui-1.3.3/themes/default/easyui.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/icon.css"
+          th:href="@{/jquery-easyui-1.3.3/themes/icon.css}"/>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.min.js"
+            th:src="@{/jquery-easyui-1.3.3/jquery.min.js}"></script>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.easyui.min.js"
+            th:src="@{/jquery-easyui-1.3.3/jquery.easyui.min.js}"></script>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js"
+            th:src="@{/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js}"></script>
 </head>
 <script type="text/javascript">
 
     /*<![CDATA[*/
 
-    $(function(){
+    $(function () {
 
         $("#dg").datagrid({
-            method:'get'
+            method: 'get'
         });
 
     });
 
     function openLinkAddDialog() {
-        $("#dlg").dialog("open").dialog("setTitle","添加友情链接信息");
+        $("#dlg").dialog("open").dialog("setTitle", "添加友情链接信息");
         /*url="/admin/link/save";*/
     }
 
-    function openLinkModifyDialog(){
-        var selectedRows=$("#dg").datagrid("getSelections");
-        if(selectedRows.length!=1){
-            $.messager.alert("系统提示","请选择一条要编辑的数据！");
+    function openLinkModifyDialog() {
+        var selectedRows = $("#dg").datagrid("getSelections");
+        if (selectedRows.length != 1) {
+            $.messager.alert("系统提示", "请选择一条要编辑的数据！");
             return;
         }
-        var row=selectedRows[0];
-        $("#fm").form("load",row);
-        $("#dlg").dialog("open").dialog("setTitle","编辑友情链接信息");
-       /* url="/admin/link/save?id="+row.id;*/
+        var row = selectedRows[0];
+        $("#fm").form("load", row);
+        $("#dlg").dialog("open").dialog("setTitle", "编辑友情链接信息");
+        /* url="/admin/link/save?id="+row.id;*/
     }
 
-    function saveLink(){
-        $("#fm").form("submit",{
-            url:"/admin/link/save",
-            onSubmit:function(){
+    function saveLink() {
+        $("#fm").form("submit", {
+            url: "/admin/link/save",
+            onSubmit: function () {
                 return $(this).form("validate");
             },
-            success:function(result){
-                var result=eval('('+result+')');
-                if(result.success){
-                    $.messager.alert("系统提示","保存成功！");
+            success: function (result) {
+                var result = eval('(' + result + ')');
+                if (result.success) {
+                    $.messager.alert("系统提示", "保存成功！");
                     resetValue();
                     $("#dlg").dialog("close");
                     $("#dg").datagrid("reload");
@@ -56,29 +61,29 @@
         });
     }
 
-    function deleteLink(){
-        var selectedRows=$("#dg").datagrid("getSelections");
-        if(selectedRows.length==0){
-            $.messager.alert("系统提示","请选择要删除的数据！");
+    function deleteLink() {
+        var selectedRows = $("#dg").datagrid("getSelections");
+        if (selectedRows.length == 0) {
+            $.messager.alert("系统提示", "请选择要删除的数据！");
             return;
         }
-        var strIds=[];
-        for(var i=0;i<selectedRows.length;i++){
+        var strIds = [];
+        for (var i = 0; i < selectedRows.length; i++) {
             strIds.push(selectedRows[i].id);
         }
-        var ids=strIds.join(",");
-        $.messager.confirm("系统提示","您确定要删除这<font color=red>"+selectedRows.length+"</font>条数据吗？",function(r){
-            if(r){
+        var ids = strIds.join(",");
+        $.messager.confirm("系统提示", "您确定要删除这<font color=red>" + selectedRows.length + "</font>条数据吗？", function (r) {
+            if (r) {
                 $("#ids").val(ids);
-                $("#deleteLinkForm").form("submit",{
-                    url:"/admin/link/delete",
-                    success:function(result){
+                $("#deleteLinkForm").form("submit", {
+                    url: "/admin/link/delete",
+                    success: function (result) {
                         var result = eval('(' + result + ')');
-                        if(result.success){
-                            $.messager.alert("系统提示","数据已成功删除！");
+                        if (result.success) {
+                            $.messager.alert("系统提示", "数据已成功删除！");
                             $("#dg").datagrid("reload");
-                        }else{
-                            $.messager.alert("系统提示","数据删除失败，请联系管理员！");
+                        } else {
+                            $.messager.alert("系统提示", "数据删除失败，请联系管理员！");
                         }
                     }
                 });
@@ -87,7 +92,7 @@
         });
     }
 
-    function closeLinkDialog(){
+    function closeLinkDialog() {
         resetValue();
         $("#dlg").dialog("close");
     }
@@ -114,7 +119,7 @@
     </tr>
     </thead>
 </table>
-<form id="deleteLinkForm"  method="post">
+<form id="deleteLinkForm" method="post">
     <input type="hidden" name="_method" value="delete"/>
     <input type="hidden" name="ids" id="ids" value="delete"/>
 </form>
@@ -131,7 +136,7 @@
                 <td>友情链接名称：</td>
                 <td>
                     <input type="text" id="name" name="name" class="easyui-validatebox" required="true"/>
-                    <input type="hidden" name="id"  id="id"/>
+                    <input type="hidden" name="id" id="id"/>
                     <input type="hidden" name="_method" value="put" th:if="name != null"/>
                 </td>
             </tr>
@@ -144,15 +149,16 @@
             <tr>
                 <td>友情链接排序：</td>
                 <td>
-                    <input type="text" id="sort" name="sort" class="easyui-numberbox" required="true" style="width: 60px"/>&nbsp;(友情链接根据排序序号从小到大排序)
+                    <input type="text" id="sort" name="sort" class="easyui-numberbox" required="true"
+                           style="width: 60px"/>&nbsp;(友情链接根据排序序号从小到大排序)
                 </td>
             </tr>
         </table>
     </form>
 </div>
 <div id="dlg-buttons">
-    <a href="javascript:saveLink()" class="easyui-linkbutton" iconCls="icon-ok" >保存</a>
-    <a href="javascript:closeLinkDialog()" class="easyui-linkbutton" iconCls="icon-cancel" >关闭</a>
+    <a href="javascript:saveLink()" class="easyui-linkbutton" iconCls="icon-ok">保存</a>
+    <a href="javascript:closeLinkDialog()" class="easyui-linkbutton" iconCls="icon-cancel">关闭</a>
 </div>
 </body>
 </html>
