--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="UTF-8"/>
+    <meta charset="UTF-8"/>
     <title>后台管理界面-电影推酷网</title>
-    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/default/easyui.css" th:href="@{/jquery-easyui-1.3.3/themes/default/easyui.css}"/>
-    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/icon.css" th:href="@{/jquery-easyui-1.3.3/themes/icon.css}"/>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.min.js" th:src="@{/jquery-easyui-1.3.3/jquery.min.js}"></script>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.easyui.min.js" th:src="@{/jquery-easyui-1.3.3/jquery.easyui.min.js}"></script>
-    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js" th:src="@{/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js}"></script>
+    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/default/easyui.css"
+          th:href="@{/jquery-easyui-1.3.3/themes/default/easyui.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/jquery-easyui-1.3.3/themes/icon.css"
+          th:href="@{/jquery-easyui-1.3.3/themes/icon.css}"/>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.min.js"
+            th:src="@{/jquery-easyui-1.3.3/jquery.min.js}"></script>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.easyui.min.js"
+            th:src="@{/jquery-easyui-1.3.3/jquery.easyui.min.js}"></script>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js"
+            th:src="@{/jquery-easyui-1.3.3/locale/easyui-lang-zh_CN.js}"></script>
 </head>
 <script type="text/javascript">
 
     /*<![CDATA[*/
 
-    $(function(){
+    $(function () {
 
         //捕捉 'onSelect' 事件
         /*$('#tabs').tabs({
@@ -25,10 +30,10 @@
 
     });
 
-    function logout(){
-        $.messager.confirm("系统提示","您确定要退出系统吗？",function(r){
-            if(r){
-                window.location.href="/logout";
+    function logout() {
+        $.messager.confirm("系统提示", "您确定要退出系统吗？", function (r) {
+            if (r) {
+                window.location.href = "/logout";
             }
         });
 
@@ -44,37 +49,37 @@
             }
         });*/
 
-       /* $.messager.progress({
-            interval:400
-        });*/
+        /* $.messager.progress({
+             interval:400
+         });*/
 
 
     }
 
-    function openTab(text,url,iconCls){
-        if($("#tabs").tabs("exists",text)){
-            $("#tabs").tabs("select",text);
-        }else{
-            var content="<iframe frameborder=0 scrolling='auto' style='width:100%;height:99.6%' src='/admin/"+url+"'></iframe>";
-            $("#tabs").tabs("add",{
-                title:text,
-                iconCls:iconCls,
-                closable:true,
-                content:content
+    function openTab(text, url, iconCls) {
+        if ($("#tabs").tabs("exists", text)) {
+            $("#tabs").tabs("select", text);
+        } else {
+            var content = "<iframe frameborder=0 scrolling='auto' style='width:100%;height:99.6%' src='/admin/" + url + "'></iframe>";
+            $("#tabs").tabs("add", {
+                title: text,
+                iconCls: iconCls,
+                closable: true,
+                content: content
             });
 
-           /* // 添加一个新的标签页面板（tab panel）
-            $('#tabs').tabs('add',{
-                title:text,
-                content:'Tab Body'+text,
-                closable:true,
-                tools:[{
-                    iconCls:'icon-mini-refresh',
-                    handler:function(){
-                        alert('refresh');
-                    }
-                }]
-            });*/
+            /* // 添加一个新的标签页面板（tab panel）
+             $('#tabs').tabs('add',{
+                 title:text,
+                 content:'Tab Body'+text,
+                 closable:true,
+                 tools:[{
+                     iconCls:'icon-mini-refresh',
+                     handler:function(){
+                         alert('refresh');
+                     }
+                 }]
+             });*/
 
         }
     }
@@ -87,7 +92,8 @@
     <table style="padding: 5px" width="100%">
         <tr>
             <td width="50%">
-                <img alt="logo" src="/static/images/logo.jpg" style='width: 375px;height:65px' th:src="@{/images/logo.jpg}"/>
+                <img alt="logo" src="/static/images/logo.jpg" style='width: 375px;height:65px'
+                     th:src="@{/images/logo.jpg}"/>
             </td>
             <td valign="bottom" align="right" width="50%">
                 <font size="3">&nbsp;&nbsp;<strong>欢迎：</strong><span th:text="${#httpServletRequest.remoteUser}"></span></font>
@@ -106,12 +112,18 @@
 
 <div region="west" style="width: 200px" title="导航菜单" split="true">
     <div style="padding-top: 10px;padding-left: 10px;" data-toggle="topjui-sidemenu" data-options="data:data">
-        <a href="javascript:openTab('添加电影信息','film/toAddFilm','icon-addFilm')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-addFilm'" style="width: 150px;">添加电影信息</a>
-        <a href="javascript:openTab('电影动态管理','/link/toLinkManage','icon-dynamic')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-dynamic'" style="width: 150px;">电影动态管理</a>
-        <a href="javascript:openTab('电影信息管理','filmManage.html','icon-film')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-film'" style="width: 150px;">电影信息管理</a>
-        <a href="javascript:openTab('网址信息管理','webSiteManage.html','icon-website')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-website'" style="width: 150px;">网址信息管理</a>
-        <a href="javascript:openTab('友情链接管理','linkManage.html','icon-link')" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-link'" style="width: 150px;">友情链接管理</a>
-        <a href="javascript:logout()" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-exit'" style="width: 150px;">安全退出</a>
+        <a href="javascript:openTab('添加电影信息','film/toAddFilm','icon-addFilm')" class="easyui-linkbutton"
+           data-options="plain:true,iconCls:'icon-addFilm'" style="width: 150px;">添加电影信息</a>
+        <a href="javascript:openTab('电影动态管理','/link/toLinkManage','icon-dynamic')" class="easyui-linkbutton"
+           data-options="plain:true,iconCls:'icon-dynamic'" style="width: 150px;">电影动态管理</a>
+        <a href="javascript:openTab('电影信息管理','','icon-film')" class="easyui-linkbutton"
+           data-options="plain:true,iconCls:'icon-film'" style="width: 150px;">电影信息管理</a>
+        <a href="javascript:openTab('网址信息管理','webSiteManage.html','icon-website')" class="easyui-linkbutton"
+           data-options="plain:true,iconCls:'icon-website'" style="width: 150px;">网址信息管理</a>
+        <a href="javascript:openTab('友情链接管理','/webSite/toWebSiteManage','icon-link')" class="easyui-linkbutton"
+           data-options="plain:true,iconCls:'icon-link'" style="width: 150px;">友情链接管理</a>
+        <a href="javascript:logout()" class="easyui-linkbutton" data-options="plain:true,iconCls:'icon-exit'"
+           style="width: 150px;">安全退出</a>
     </div>
 </div>
 
