电影动态信息管理模块、标签页刷新按钮可以无限添加bug修复

--- a/src/main/resources/static/jquery-easyui-1.3.3/themes/icon.css
+++ b/src/main/resources/static/jquery-easyui-1.3.3/themes/icon.css
@@ -27,6 +27,8 @@
 }
 .icon-reload{
 	background:url('icons/reload.png') no-repeat center center;
+	margin-right:8px;
+	margin-left:-6px;
 	cursor: pointer;
 }
 .icon-search{
