--- a/src/main/resources/templates/admin/filmManage.html
+++ b/src/main/resources/templates/admin/filmManage.html
@@ -53,7 +53,11 @@
                 if (r) {
                     $.post("/admin/film/delete", {ids: ids}, function (result) {
                         if (result.success) {
-                            $.messager.alert("系统提示", "数据已成功删除！");
+                            if (result.notDeleteAll) {
+                                $.messager.alert("系统提示", "以下"+result.notDeteleNumber+"部电影在电影动态信息中存在电影信息未能成功删除："+result.filmNames);
+                            }else {
+                                $.messager.alert("系统提示", "数据已成功删除！");
+                            }
                             $("#dg").datagrid("reload");
                         } else {
                             $.messager.alert("系统提示", "数据删除失败，请联系管理员！");
