--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,27 +1,109 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title th:text="${title}+'-电影推酷网'">玩电影网</title>
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap3/css/bootstrap.min.css"
+          th:href="@{/bootstrap3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/bootstrap3/css/bootstrap-theme.min.css"
+          th:href="@{/bootstrap3/css/bootstrap-theme.min.css}"/>
+    <link rel="stylesheet" type="text/css" href="/static/css/film.css"
+          th:href="@{/css/film.css}"/>
+    <script type="text/javascript" src="/static/jquery-easyui-1.3.3/jquery.min.js"
+            th:src="@{/jquery-easyui-1.3.3/jquery.min.js}"></script>
+
+    <script th:inline="javascript" >
+        /*<![CDATA[*/
+        window.onload=function(){
+            var error=[[${error}]];
+            if(error!=null){
+                alert(error);
+            }
+        }
+        /*]]>*/
+    </script>
 </head>
-<body >
-<script type="text/javascript" src="/static/home/js/EffectItem.js" th:src="@{/home/js/EffectItem.js}"></script>
-<script type="text/javascript" src="/static/home/js/Effect.js" th:src="@{/home/js/Effect.js}"></script>
-<script type="text/javascript">
-    new Effect({
-        //特效图片，多张图片时传入数组，单个图片时传入字符串
-        effectUrl : ["/home/images/xue.png","/home/images/xin.png","/home/images/a1.png","/home/images/a2.png","/home/images/a3.png","/home/images/a4.png"],
-        //特效旋转，1/true为旋转，0/false为不旋转
-        rotate : 1,
-        //特效方向，left/right/up/down
-        direction : "up"
-    });
+<body>
 
-    function admin() {
-        window.location.href='/admin'
-    }
-</script>
+<div class="container">
 
-<a href="javascript:admin()">去登陆</a>
+    <div th:replace="common/head::head"></div>
+
+    <div th:replace="common/menu::menu"></div>
+
+    <div class="row">
+
+        <div class="col-md-8">
+            <div th:replace="${mainPage}::${mainPageKey}"></div>
+        </div>
+
+        <div class="col-md-4">
+            <div class="data_list">
+                <div class="data_list_title">
+                    <img src="/images/dynamic_icon.png" />
+                    最新电影动态
+                </div>
+                <div class="datas">
+                    <ul>
+                        <li th:each="newestInfo:${application.newestInfoList}"><span><a target="_blank" th:href="'/film/'+${newestInfo.film.id}" th:title="${newestInfo.film.name+' -> '+newestInfo.info}" th:text="${newestInfo.film.name+' -> '+newestInfo.info}"></a></span></li>
+                    </ul>
+                </div>
+            </div>
+
+
+            <div class="data_list">
+                <div class="data_list_title">
+                    <img src="/images/hot_icon.png" />
+                    最新热门电影推荐
+                </div>
+                <div class="datas">
+                    <ul>
+                        <li th:each="newestHotFilm:${application.newestHotFilmList}"><span><a target="_blank" th:href="'/film/'+${newestHotFilm.id}" th:title="${newestHotFilm.name}" th:text="${newestHotFilm.name}"></a></span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="data_list">
+                <div class="data_list_title">
+                    <img src="/images/website_icon.png" />
+                    最新电影网址收录
+                </div>
+                <div class="datas">
+                    <ul>
+                        <li th:each="newestWebSite:${application.newestWebSiteList}"><span><a target="_blank" th:href="${newestWebSite.url}" th:title="${newestWebSite.name}" th:text="${newestWebSite.name}"></a></span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="data_list">
+                <div class="data_list_title">
+                    <img src="/images/film_icon.png" />
+                    最新电影收录
+                </div>
+                <div class="datas">
+                    <ul>
+                        <li th:each="newestFilm:${application.newestFilmList}"><span><a target="_blank" th:href="'/film/'+${newestFilm.id}" th:title="${newestFilm.name}" th:text="${newestFilm.name}"></a></span></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="data_list">
+                <div class="data_list_title">
+                    <img src="/images/link_icon.png" />
+                    友情链接
+                </div>
+                <div class="datas">
+                    <ul>
+                        <li th:each="link:${application.linkList}"><span><a target="_blank" th:href="${link.url}" th:title="${link.name}" th:text="${link.name}"></a></span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+    <div th:replace="common/foot::foot"></div>
+
+</div>
 </body>
 </html>
