--- a/src/main/resources/static/css/film.css
+++ b/src/main/resources/static/css/film.css
@@ -14,7 +14,7 @@ body{
 .data_list .data_list_title{
 	font-size: 15px;
 	font-weight: bold;
-	
+
 	border-bottom: 1px solid #E5E5E5;
 	padding-bottom: 10px;
 	padding-top: 5px;
@@ -42,6 +42,14 @@ body{
 	height: 2100px;
 }
 
+.data_list .rImageDatas{
+	height: 550px;
+}
+
+.data_list .lImageDatas{
+	height: 1300px;
+}
+
 .data_list .datas .imageUl li {
 	float: left;
 	margin-right: 25px;
@@ -64,4 +72,23 @@ body{
 .data_list .datas .indexFilm{
 	width: 140px;
 	height: 198px;
+}
+
+.data_list .film_title{
+	margin-top:20px;
+	text-align: center;
+}
+
+.data_list .film_publishDate{
+	text-align: center;
+}
+
+.data_list .film_content{
+	margin-top:20px;
+	padding-bottom: 30px;
+}
+
+.data_list .film_lastAndNextPage{
+	border-top:1px dotted black;
+	padding: 10px;
 }
